# PhotoTransfer

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  README_FR.md  build.py  generate_test_photos.py  photo_organizer.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
